# db

./: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  test.py
db/: __init__.py  base.py  misc.py  models.py  session.py  settings.py
db/alembic/: README  env.py
db/alembic/versions/: 19622fffe0f5_.py  1d7a29fad745_.py  20260410_0001_initial_schema.py  20260411_0002_chat_groups.py  20260413_0003_user_avatar.py  20260420_0004_message_reference.py  20260420_0005_message_reference_content.py  20260420_0006_message_reference_author.py  20260420_0007_message_forward.py  20260423_0008_user_subscription_tier.py  20260423_0009_user_youtube_assisted_enabled.py  20260425_0010_user_email.py  20260425_0011_user_email_optional.py  20260630_0012_message_replies.py  26d89ab7e4f0_.py  31f01d047020_add_metadata_for_message.py  46aa89470a39_.py  7387778fecda_.py  d8c9bebdee09_init.py
db/misc/: __init__.py  cond.py  defaults.py  tables.py  utils.py
db/models/: general.py
db/scripts/: sync_schema.py
tests/: test_misc.py
